# download-bot

./: .gitignore  Dockerfile  README.md  docker-compose.yml
.history/: .env_20241104010747  Dockerfile_20241104001436  Dockerfile_20241104005548  Dockerfile_20241104010453  Dockerfile_20241104011717  Dockerfile_20241104012001
.history/src/: bot_20241103235834.py  bot_20241104005552.py  bot_20241104011445.py  bot_20241104012609.py  bot_20241104191951.py  bot_20241104192146.py  bot_20241104192346.py  pyproject_20241104005251.toml  pyproject_20241104005543.toml  pyproject_20241104010202.toml
src/: pyproject.toml
