[project]
name = "youtube-telegram-bot"
version = "0.1.0"
description = "Telegram bot for downloading YouTube videos"
authors = [{name = "Abdullah Levin", email = "abdullahlevin@gmail.com"}]
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.0.0",
    "yt-dlp>=2024.09.01",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
